# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import { cardsRouter } from "./cards";
 import { collectionRouter } from "./collection";
 import { wishlistRouter } from "./wishlist";
 import { portfolioRouter } from "./portfolio";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(cardsRouter);
 router.use(collectionRouter);
 router.use(wishlistRouter);
 router.use(portfolioRouter);
+router.use(storageRouter);
 
 export default router;
